--- a/SchoolManagmentApp/baseTemplate/base.html
+++ b/SchoolManagmentApp/baseTemplate/base.html
@@ -53,6 +53,6 @@
 				</header>
 				{%block content%}
 				{%endblock content%}
-		<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/base_script.js' %}"></script>
 	</body>
 </html>
