--- a/SchoolManagmentApp/baseTemplate/base.html
+++ b/SchoolManagmentApp/baseTemplate/base.html
@@ -11,10 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
 		/>
-		<script
-			src="https://kit.fontawesome.com/04a6da9d09.js"
-			crossorigin="anonymous"
-		></script>
+		<script src="https://kit.fontawesome.com/6a54b64328.js" crossorigin="anonymous"></script>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -54,5 +51,6 @@
 				{%block content%}
 				{%endblock content%}
 		<script type="text/javascript" src="{% static 'js/base_script.js' %}"></script>
+		
 	</body>
 </html>
