--- a/SchoolManagmentApp/baseTemplate/base.html
+++ b/SchoolManagmentApp/baseTemplate/base.html
@@ -49,9 +49,9 @@
 							<span></span>
 						</div>
 						<ul class="nav-list">
-							<li><a href="#">Home</a></li>
-							<li><a href="#">About project</a></li>
-							<li><a href="#">Authors</a></li>
+							<li><a href="{%url 'events'%}">Events</a></li>
+							<li><a href="{%url 'inbox'%}">Messages</a></li>
+							<li><a href="{% url 'update_user_profile'%}"><img class='avatar-pic' src="{{ user.profile.photo.url }}" alt=""></a></li>
 							<li><a href="{% url 'logout' %}"><button id="login-nav" class="login-nav-btn" >Logout</button></a></li>
 						</ul>
 					</nav>
