calendarApp - Implemented the add and edit lesson features. Also, made a few fixes to the logic. Still need to add verification for classroom and teacher occupancy.

--- a/SchoolManagmentApp/baseTemplate/base.html
+++ b/SchoolManagmentApp/baseTemplate/base.html
@@ -49,6 +49,7 @@
 							<span></span>
 						</div>
 						<ul class="nav-list">
+							<li><a href="{%url 'view_schedule'%}">Schedule</a></li>
 							<li><a href="{%url 'events'%}">Events</a></li>
 							<li><a href="{%url 'inbox'%}">Messages</a></li>
 							<li><a href="{% url 'update_user_profile'%}"><img class='avatar-pic' src="{{ user.profile.photo.url }}" alt=""></a></li>
