--- a/SchoolManagmentApp/baseTemplate/base.html
+++ b/SchoolManagmentApp/baseTemplate/base.html
@@ -49,6 +49,7 @@
 							<span></span>
 						</div>
 						<ul class="nav-list">
+							<li><a href="{% url 'lesson_delivery_start' %}">Start Lesson</a></li>
 							<li><a href="{%url 'events'%}">Events</a></li>
 							<li><a href="{%url 'inbox'%}">Messages</a></li>
 							<li><a href="{% url 'update_user_profile'%}"><img class='avatar-pic' src="{{ user.profile.photo.url }}" alt=""></a></li>
