minor style issues resolved

--- a/SchoolManagmentApp/baseTemplate/base.html
+++ b/SchoolManagmentApp/baseTemplate/base.html
@@ -50,6 +50,7 @@
 						</div>
 						<ul class="nav-list">
 							<li><a href="{%url 'view_schedule'%}">Schedule</a></li>
+							<li><a href="{% url 'teacher_reports' %}">Your Reports</a></li>
 							<li><a href="{% url 'lesson_delivery_start' %}">Start Lesson</a></li>
 							<li><a href="{%url 'events'%}">Events</a></li>
 							<li><a href="{%url 'inbox'%}">Messages</a></li>
