--- a/SchoolManagmentApp/baseTemplate/base.html
+++ b/SchoolManagmentApp/baseTemplate/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 {%load static%}
-<html lang="pl">
+<html lang="en">
+	
 	<head>
 		<meta charset="UTF-8" />
+		
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
