--- a/SchoolManagmentApp/baseTemplate/base.html
+++ b/SchoolManagmentApp/baseTemplate/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {%load static%}
-<html lang="pl">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,6 +21,9 @@
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
 		/>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="{% static '/css/base_style.css' %}" />
 		<title>{% block title %} {% endblock title %}</title>
 	</head>
@@ -49,6 +52,11 @@
 							<span></span>
 						</div>
 						<ul class="nav-list">
+							{%if user.profile.account_type == 'Teacher'%}
+							<li><a href="{%url 'view_grades_teacher'%}">Grades</a></li>
+							{%else%}
+							<li><a href="{%url 'view_grades'%}">Grades</a></li>
+							{%endif%}
 							<li><a href="{%url 'view_schedule'%}">Schedule</a></li>
 							<li><a href="{% url 'teacher_reports' %}">Your Reports</a></li>
 							<li><a href="{% url 'lesson_delivery_start' %}">Start Lesson</a></li>
